improvement(BE-86): Swagger test( Get mined images by admin)
