# docs/swagger.json
@@ -12,6 +12,29 @@
     "host": "localhost:9000",
     "basePath": "/api/v1/",
     "paths": {
+        "/admin/mined-images": {
+            "get": {
+                "description": "this returns the mined images of all users",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Mined Images"
+                ],
+                "summary": "this returns the mined images of all users",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.MinedImage"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/health": {
             "get": {
                 "description": "Responds with the server status as JSON.",
@@ -63,6 +86,35 @@
         }
     },
     "definitions": {
+        "model.MinedImage": {
+            "type": "object",
+            "properties": {
+                "dateCreated": {
+                    "type": "string"
+                },
+                "dateModified": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "imageKey": {
+                    "type": "string"
+                },
+                "imageName": {
+                    "type": "string"
+                },
+                "imagePath": {
+                    "type": "string"
+                },
+                "textContent": {
+                    "type": "string"
+                },
+                "userID": {
+                    "type": "string"
+                }
+            }
+        },
         "model.Ping": {
             "type": "object",
             "properties": {
